--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "src/index.js",
+  "scripts": {
+    "start": "node src/index.js"
+  },
   "dependencies": {
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "mysql2": "^3.11.4",
-    "sequelize": "^6.37.5"
+    "dotenv": "^10.0.0"
   }
 }
