--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "express": "^4.18.2",
+    "node": "^18.20.5"
   }
 }
