--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.18.2",
-    "node": "^18.20.5"
+    "sequelize": "^6.31.0",
+    "mysql2": "^3.3.3"
   }
 }
